--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 			//Cube or box
 			
 			var geometry = new THREE.BoxGeometry( 4,4,4 );
-			var material = new THREE.MeshBasicMaterial( {color: 0x00ff00,wireframe:false} );
+			var material = new THREE.MeshBasicMaterial( {color: 0x00ff00,wireframe:true} );
 			var cube = new THREE.Mesh( geometry, material );
 			
 
 			//Cone
 			var coneShape = new THREE.ConeGeometry(7,9,8);
-			var theMat = new THREE.MeshBasicMaterial({color: 0xFFFFFF,wireframe:false});
+			var theMat = new THREE.MeshBasicMaterial({color: 0xFFFFFF,wireframe:true});
 			var shape = new THREE.Mesh(coneShape,theMat);
 
 			//Sphere
