--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 			var cRack= new THREE.MeshBasicMaterial( { color: 0xffff00,wireframe:true } );
 			var lathe = new THREE.Mesh( bPt,cRack);
 		
-			//Add Sphere
-			var geometry = new THREE.SphereGeometry( 5, 32, 32 );
-			var material = new THREE.MeshBasicMaterial( {color: 0xffff00} );
-			var sphere = new THREE.Mesh( geometry, material );
-			scene.add( sphere );
+			//Add cylinder
+			var geometry = new THREE.CylinderGeometry( 5, 5, 20, 32 );
+			var material = new THREE.MeshBasicMaterial( {color: 0xffff00,wireframe:true} );
+			var cylinder = new THREE.Mesh( geometry, material );
+			scene.add( cylinder );
 			
 
 			//Add scene
@@ -108,6 +108,8 @@
 				lathe.rotation.x += 0.013;
 				lathe.rotation.y += 0.005;
 				lathe.rotation.z -= 0.006;
+				cylinder.rotation.x += 0.005;
+				cylinder.rotation.y -= 0.002;
 				renderer.render( scene, camera );
 			};
 
