--- a/index.html
+++ b/index.html
@@ -1,15 +1,123 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5.js example</title>
-    <style> body {padding: 0; margin: 0;} </style>
-    <script src="p5.min.js"></script>
-    <script src="p5.dom.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="sketch.js"></script>
-  </head>
-  <body>
-  </body>
+
+<html>
+	<head>
+		<title>My first three.js app</title>
+		<style>
+			body { margin: 0; }
+			canvas { width: 100%; height: 100% }
+
+		</style>
+	</head>
+	<body>
+		<script src="js/three.js"></script>
+		<script src="js/OrbitControls.js"></script>
+		<script>
+			var scene = new THREE.Scene();
+			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
+
+			var renderer = new THREE.WebGLRenderer();
+			renderer.setSize( window.innerWidth, window.innerHeight );
+			document.body.appendChild( renderer.domElement );
+
+			//Add window event 
+			window.addEventListener('resize',function()
+			{
+				var width = window.innerWidth;
+				var height = window.innerHeight;
+				renderer.setSize(width,height);
+				camera.aspect = width / height;
+				camera.updateProjectionMatrix();
+			});
+
+			//Add control functions
+
+			controls = new THREE.OrbitControls(camera,renderer.domElement);
+
+			//Cube or box
+			
+			var geometry = new THREE.BoxGeometry( 4,4,4 );
+			var material = new THREE.MeshBasicMaterial( {color: 0x00ff00,wireframe:true} );
+			var cube = new THREE.Mesh( geometry, material );
+			
+
+			//Cone
+			var coneShape = new THREE.ConeGeometry(7,9,8);
+			var theMat = new THREE.MeshBasicMaterial({color: 0xFFFFFF,wireframe:true});
+			var shape = new THREE.Mesh(coneShape,theMat);
+
+			//Sphere
+			
+
+			//Line
+			var geometry = new THREE.BoxBufferGeometry(24,24,24);
+			var edges = new THREE.EdgesGeometry( geometry );
+			var line = new THREE.LineSegments( edges, new THREE.LineBasicMaterial( { color: 0xffffff } ) );
+
+			//Torus
+
+			var doughnut = new THREE.TorusGeometry(5,7,8,9);
+			var thingy = new THREE.MeshBasicMaterial({color: 0xFFFFFF,wireframe:true});
+			var h = new THREE.Mesh(doughnut,thingy);
+			
+			//Lathe
+
+			var pointSection = [];
+			for ( var i = 0; i < 10; i ++ ) {
+			pointSection.push( new THREE.Vector2( Math.sin( i * 0.2 ) * 10 + 5, ( i - 5 ) * 2 ) );
+				}
+			var bPt= new THREE.LatheBufferGeometry( pointSection);
+			var cRack= new THREE.MeshBasicMaterial( { color: 0xffff00,wireframe:true } );
+			var lathe = new THREE.Mesh( bPt,cRack);
+		
+			//Add cylinder
+			var geometry = new THREE.CylinderGeometry( 5, 5, 20, 32 );
+			var material = new THREE.MeshBasicMaterial( {color: 0xffff00,wireframe:true} );
+			var cylinder = new THREE.Mesh( geometry, material );
+			scene.add( cylinder );
+			
+
+			//Add scene
+			scene.add(cube);
+			scene.add(shape);
+			scene.add(line);
+			scene.add(h);
+			scene.add( lathe );
+			
+
+			//Camera positions
+			camera.position.y = 1;
+			camera.position.z = 3;
+
+			
+
+			var animate = function () {
+				requestAnimationFrame( animate );
+
+				cube.rotation.x += 0.01;
+				cube.rotation.y -= 0.01;
+				cube.rotation.z += 0.03;
+				shape.rotation.x -= 0.01;
+				shape.rotation.y -= 0.003;
+				shape.rotation.z += 0.012;
+				h.rotation.x -= 0.003;
+				h.rotation.y += 0.005;
+				h.rotation.z += 0.004;
+				line.rotation.x -= 0.002;
+				line.rotation.y += 0.001;
+				line.rotation.z += 0.004;
+				lathe.rotation.x += 0.013;
+				lathe.rotation.y += 0.005;
+				lathe.rotation.z -= 0.006;
+				cylinder.rotation.x += 0.005;
+				cylinder.rotation.y -= 0.002;
+				renderer.render( scene, camera );
+			};
+
+			animate()
+
+			
+
+			
+		</script>
+	</body>
 </html>
