--- a/AR.js/three.js/examples/mobile-performance-addfbx2copy3.html
+++ b/AR.js/three.js/examples/mobile-performance-addfbx2copy3.html
@@ -249,7 +249,7 @@
          };
 
          var textureLoader = new THREE.TextureLoader( manager );
-         var texture = textureLoader.load( '../../data/data/UV_Grid_Sm.jpg' );
+         var texture = textureLoader.load( '../../data/data/seal.png' );
 
          // obj model
          var onProgress = function ( xhr ) {
