--- a/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
+++ b/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
@@ -330,7 +330,7 @@
                     .setMaterials( materials )
                     .setPath( '../../data/data/' )
                     .load( 'stacks.obj', function ( object ) {
-                        object.scale.set(.6, .6, .6);
+                        object.scale.set(1, 1, 1);
                         arWorldRoot.add( object );
                     }, onProgress, onError );
             } );
