--- a/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
+++ b/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
@@ -330,9 +330,9 @@
                     .setMaterials( materials )
                     .setPath( '../../data/data/' )
                     .load( 'stacks.obj', function ( object ) {
-                        object.scale.set(1, 1, 1);
+                        object.scale.set(3, 3, 3);
                         arWorldRoot.add( object );
-                    }, onProgress, onError );
+                    }, onProgress, onError ());
             } );
         
     animate();
