--- a/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
+++ b/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
@@ -171,13 +171,13 @@
         
         ///////////////////////////////////////////////////////////
         // add a static cube
-        geometry = new THREE.CubeGeometry(1,1,1);
-        material = new THREE.MeshNormalMaterial({
-            transparent : true,
-            opacity: 0.5,
-            side: THREE.DoubleSide
-        }); 
-        mesh = new THREE.Mesh( geometry, material );
+        // geometry = new THREE.CubeGeometry(1,1,1);
+        // material = new THREE.MeshNormalMaterial({
+        //     transparent : true,
+        //     opacity: 0.5,
+        //     side: THREE.DoubleSide
+        // }); 
+        // mesh = new THREE.Mesh( geometry, material );
 
         //Keep these two lines...
         mesh.position.y	= geometry.parameters.height/2
@@ -246,7 +246,7 @@
          };
 
          var textureLoader = new THREE.TextureLoader( manager );
-         var texture = textureLoader.load( '../../data/data/UV_Grid_Sm.jpg' );
+         var texture = textureLoader.load( '../../data/data/seal.png' );
 
          // obj model
          var onProgress = function ( xhr ) {
@@ -324,12 +324,12 @@
         THREE.Loader.Handlers.add( /\.dds$/i, new THREE.DDSLoader() );
         new THREE.MTLLoader()
             .setPath( '../../data/data/' )
-            .load( 'stacks.mtl', function ( materials ) {
+            .load( 'squares.mtl', function ( materials ) {
                 materials.preload();
                 new THREE.OBJLoader()
                     .setMaterials( materials )
                     .setPath( '../../data/data/' )
-                    .load( 'stacks.obj', function ( object ) {
+                    .load( 'squares.obj', function ( object ) {
                         object.scale.set(.3, .3, .3);
                         arWorldRoot.add( object );
                     }, onProgress, theError ());
