--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
 			var material = new THREE.MeshBasicMaterial( {color: 0xffff00,wireframe:true} );
 			var cylinder = new THREE.Mesh( geometry, material );
 			scene.add( cylinder );
+
+
+			//Add plane
+
+			var geoPlane = new THREE.PlaneGeometry(5,7,2);
+			var t = new THREE.MeshBasicMaterial({color: 0xffff00, side: THREE.DoubleSide});
+			var thingy = new THREE.Mesh(geoPlane,t);
 			
 
 			//Add scene
@@ -82,6 +89,7 @@
 			scene.add(line);
 			scene.add(h);
 			scene.add( lathe );
+			scene.add(thingy);
 			
 
 			//Camera positions
