--- a/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
+++ b/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
@@ -262,18 +262,18 @@
          var onError = function ( xhr ) {
          };
 
-         // var loader = new THREE.OBJLoader( manager );
-         // loader.load( '../../data/data/male02/male02.obj', function ( object ) {
+         var loader = new THREE.OBJLoader( manager );
+         loader.load( '../../data/data/male02/male02.obj', function ( object ) {
 
-         //     object.traverse( function ( child ) {
+             object.traverse( function ( child ) {
 
-         //         if ( child instanceof THREE.Mesh ) {
+                 if ( child instanceof THREE.Mesh ) {
 
-         //             child.material.map = texture;
+                     child.material.map = texture;
 
-         //         }
+                 }
 
-         //     } );
+             } );
 
  //                 object.position.y = - 95;
  //                 scene.add( object );
