--- a/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
+++ b/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
@@ -191,13 +191,13 @@
         //icosphere: example from from 3js playground 
         //add the geometry, material, and mesh lines from the 3js GUI
         //MAKE SURE SCALE IS 1 (a scale of 1 will mean your object is as big as the image target)
-        geometry = new THREE.CubeGeometry(1, 1, 1);
-        material = new THREE.MeshNormalMaterial({shading: THREE.FlatShading});
-        mesh = new THREE.Mesh(geometry, material);
+        // geometry = new THREE.CubeGeometry(1, 1, 1);
+        // material = new THREE.MeshNormalMaterial({shading: THREE.FlatShading});
+        // mesh = new THREE.Mesh(geometry, material);
         
-        //Keep these lines
-        mesh.position.y = 0.5 //position y equals how far away from target 
-        arWorldRoot.add( mesh ); //instead of adding mesh to the scene right away we add only when the target is detected
+        // //Keep these lines
+        // mesh.position.y = 0.5 //position y equals how far away from target 
+        // arWorldRoot.add( mesh ); //instead of adding mesh to the scene right away we add only when the target is detected
         //end icosphere code
         ///////////////////////////////////////////////////////////
         
