--- a/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
+++ b/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
@@ -248,8 +248,8 @@
 
          };
 
-         var textureLoader = new THREE.TextureLoader( manager );
-         var texture = textureLoader.load( '../../data/data/cycled-paper.jpg' );
+         // var textureLoader = new THREE.TextureLoader( manager );
+         // var texture = textureLoader.load( '../../data/data/cycled-paper.jpg' );
 
          // obj model
          var onProgress = function ( xhr ) {
@@ -259,28 +259,28 @@
              }
          };
 
-         var onError = function ( xhr ) {
-         };
+         // var onError = function ( xhr ) {
+         // };
 
-         var loader = new THREE.OBJLoader( manager );
-         loader.load( '../../data/data/male02/male02.obj', function ( object ) {
+         // var loader = new THREE.OBJLoader( manager );
+         // loader.load( '../../data/data/male02/male02.obj', function ( object ) {
 
-             object.traverse( function ( child ) {
+         //     object.traverse( function ( child ) {
 
-                 if ( child instanceof THREE.Mesh ) {
+         //         if ( child instanceof THREE.Mesh ) {
 
-                     child.material.map = texture;
+         //             child.material.map = texture;
 
-                 }
+         //         }
 
-             } );
+         //     } );
 
  //                 object.position.y = - 95;
  //                 scene.add( object );
-             object.scale.set(.02, .02, .02);
-             arWorldRoot.add( object );
+         //     object.scale.set(.02, .02, .02);
+         //     arWorldRoot.add( object );
 
-         }, onProgress, onError );
+         // }, onProgress, onError ());
 
          //end obj code
         ///////////////////////////////////////////////////////////
