--- a/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
+++ b/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
@@ -360,9 +360,9 @@
                 }
                 renderer.render( scene, camera );
                 stats.update();
-                object.rotate.x += 0.002;
-                object.rotate.y += 0.001;
-                object.rotate.z -= 0.002;
+                object.rotation.x += 0.002;
+                object.rotation.y += 0.001;
+                object.rotation.z -= 0.002;
 
             }
     
