--- a/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
+++ b/AR.js/three.js/examples/mobile-performance-addfbx2copy.html
@@ -360,7 +360,7 @@
                 }
                 renderer.render( scene, camera );
                 stats.update();
-                object.position.z=2;
+                object.rotation.z += 0.002;
                 
 
             }
