--- a/webpages/index.html
+++ b/webpages/index.html
@@ -124,10 +124,10 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../img/water.jpg" alt="">
+            <img class="img-fluid" src="img/water.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
+            <h4>Beauty of Nature</h4>
             <p class="text-muted">Illustration</p>
           </div>
         </div>
@@ -155,7 +155,7 @@
             <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Finish</h4>
+            <h4>Naturescape</h4>
             <p class="text-muted">Identity</p>
           </div>
         </div>
@@ -194,7 +194,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/views.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Window</h4>
