--- a/webpages/index.html
+++ b/webpages/index.html
@@ -166,7 +166,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/lands.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Lines</h4>
