--- a/webpages/index.html
+++ b/webpages/index.html
@@ -124,7 +124,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/water.jpg" alt="">
+            <img class="img-fluid" src="img/greens.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Beauty of Nature</h4>
@@ -138,7 +138,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../img/views.jpg" alt="">
+            <img class="img-fluid" src="../img/bridge.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Explore</h4>
