--- a/webpages/index.html
+++ b/webpages/index.html
@@ -152,7 +152,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/natureLand.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Naturescape</h4>
