--- a/webpages/index.html
+++ b/webpages/index.html
@@ -52,6 +52,8 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Digital Works</a>
+            <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">Other Works</a>
           </li>
         </ul>
       </div>
