--- a/webpages/index.html
+++ b/webpages/index.html
@@ -129,7 +129,7 @@
             <img class="img-fluid" src="img/greens.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Beauty of Nature</h4>
+            <h4></h4>
             <p class="text-muted">Illustration</p>
           </div>
         </div>
@@ -143,7 +143,7 @@
             <img class="img-fluid" src="../img/bridge.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Explore</h4>
+            <h4></h4>
             <p class="text-muted">Graphic Design</p>
           </div>
         </div>
@@ -172,7 +172,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
+            <p class="text-muted"></p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -185,7 +185,7 @@
             <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Southwest</h4>
+            <h4></h4>
             <p class="text-muted">Website Design</p>
           </div>
         </div>
