--- a/webpages/index.html
+++ b/webpages/index.html
@@ -182,7 +182,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/cliffs.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4></h4>
