--- a/webpages/index.html
+++ b/webpages/index.html
@@ -64,8 +64,8 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To Our Studio!</div>
-        <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
+        <div class="intro-lead-in">Welcome to my site</div>
+        <div class="intro-heading text-uppercase"></div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="michaelwyue.github.io">JS Animation</a>
       </div>
     </div>
