--- a/webpages/index.html
+++ b/webpages/index.html
@@ -140,11 +140,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../img/bridge.jpg" alt="">
+            <img class="img-fluid" src="img/vases.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4></h4>
-            <p class="text-muted">Graphic Design</p>
+            <p class="text-muted">Artifacts</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -154,7 +154,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/natureLand.jpg" alt="">
+            <img class="img-fluid" src="img/selfieBrush.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Naturescape</h4>
