--- a/webpages/index.html
+++ b/webpages/index.html
@@ -130,7 +130,7 @@
           </a>
           <div class="portfolio-caption">
             <h4></h4>
-            <p class="text-muted">Illustration</p>
+            <p class="text-muted">Illustration of Nature</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -157,7 +157,7 @@
             <img class="img-fluid" src="img/selfiebrush.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Naturescape</h4>
+            <h4>Self Portrait</h4>
             <p class="text-muted">Identity</p>
           </div>
         </div>
