--- a/webpages/index.html
+++ b/webpages/index.html
@@ -66,7 +66,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Welcome to my site</div>
         <div class="intro-heading text-uppercase"></div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="michaelwyue.github.io">JS Animation</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href=" michaelwyue.github.io/index.html ">JS Animation</a>
       </div>
     </div>
   </header>
