--- a/webpages/index.html
+++ b/webpages/index.html
@@ -136,8 +136,8 @@
             <img class="img-fluid" src="img/selfiebrush.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Self Portrait</h4>
-            <p class="text-muted">Identity</p>
+            <h4></h4>
+            <p class="text-muted">Abstract Identity</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -178,8 +178,8 @@
             <img class="img-fluid" src="img/views.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Window</h4>
-            <p class="text-muted">Photography</p>
+            <h4></h4>
+            <p class="text-muted">Photorealistic Nature</p>
           </div>
         </div>
       </div>
