--- a/webpages/index.html
+++ b/webpages/index.html
@@ -150,8 +150,8 @@
             <img class="img-fluid" src="img/lands.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Lines</h4>
-            <p class="text-muted"></p>
+            <h4></h4>
+            <p class="text-muted">Meditative Landscape View</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
