--- a/webpages/index.html
+++ b/webpages/index.html
@@ -53,7 +53,7 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Digital Works</a>
             <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Other Works</a>
+            <a class="nav-link js-scroll-trigger" href="portfolioSite.html">Other Works</a>
           </li>
         </ul>
       </div>
@@ -66,7 +66,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Welcome to my site</div>
         <div class="intro-heading text-uppercase"></div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href=" michaelwyue.github.io/index.html ">JS Animation</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="index.html ">JS Animation</a>
       </div>
     </div>
   </header>
