--- a/webpages/index.html
+++ b/webpages/index.html
@@ -53,7 +53,7 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Digital Works</a>
             <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="portfolioSite/index.html">Other Works</a>
+            <a class="nav-link js-scroll-trigger" href="../portfolioSite/index.html">Other Works</a>
           </li>
         </ul>
       </div>
