--- a/portfolioSite/index.html
+++ b/portfolioSite/index.html
@@ -72,7 +72,7 @@
       <div class="item active">
         <img src="natureScape.jpg" alt="Chania" width="460" height="445">
         <div class="carousel-caption">
-          <h3>Chania</h3>
+          <h3>Nature Landscape</h3>
           <p>A view from a cliff.</p>
         </div>
       </div>
