--- a/webpages/index.html
+++ b/webpages/index.html
@@ -562,7 +562,7 @@
                 <ul class="list-inline">
                   <li>Date: January 2019</li>
                   <li>Medium:Digital</li>
-                  <li>Size: </li>
+                  <li>Size: 601 x 711</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
