--- a/portfolioSite/index.html
+++ b/portfolioSite/index.html
@@ -78,18 +78,18 @@
       </div>
 
       <div class="item">
-        <img src="img_chania2.jpg" alt="Chania" width="460" height="345">
+        <img src="humanModel.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
-          <h3>Chania</h3>
-          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+          <h3>Person</h3>
+          <p>Modeled in Blender with using rigging.</p>
         </div>
       </div>
     
       <div class="item">
-        <img src="img_flower.jpg" alt="Flower" width="460" height="345">
+        <img src="vuforiaHuman.jpg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
-          <h3>Flowers</h3>
-          <p>Beautiful flowers in Kolymbari, Crete.</p>
+          <h3>AR</h3>
+          <p>3D human in AR phone app.</p>
         </div>
       </div>
 
