--- a/webpages/index.html
+++ b/webpages/index.html
@@ -594,9 +594,9 @@
                 <img class="img-fluid d-block mx-auto" src="img/views.jpg" alt="">
                 <p>Perspective screenshot view lays out the general concept of the virtual scene.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Lines</li>
-                  <li>Category: Branding</li>
+                  <li>Date: April 12, 2019</li>
+                  <li>Medium: Digital</li>
+                  <li>Size: 1707 x 858 </li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
