--- a/webpages/index.html
+++ b/webpages/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link js-scroll-trigger" href="#services">Artist Statement</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="resumeCV.pdf">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">Contact</a>
