--- a/webpages/index.html
+++ b/webpages/index.html
@@ -39,7 +39,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Artist Statement</a>
+            <a class="nav-link js-scroll-trigger" href="artist-statement.pdf">Artist Statement</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="resumeCV.pdf">Resume</a>
