--- a/webpages/index.html
+++ b/webpages/index.html
@@ -51,7 +51,7 @@
             <a class="nav-link js-scroll-trigger" href="#team">Images</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Digital Works</a>
+            <a class="nav-link js-scroll-trigger" href="#contact"></a>
             <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="../portfolioSite/index.html">Other Works</a>
           </li>
