--- a/webpages/index.html
+++ b/webpages/index.html
@@ -562,7 +562,7 @@
                 <h2 class="text-uppercase">Abstract Selfie</h2>
                 <p class="item-intro text-muted">The wonders of the concept of identity.</p>
                 <img class="img-fluid d-block mx-auto" src="img/selfiebrush.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>The abstract painting resembles the distortion of the true "self". Through the abstraction, I wanted to portray the mystical wonders of the brush texture. </p>
                 <ul class="list-inline">
                   <li>Date: January 2019</li>
                   <li>Medium:Digital</li>
@@ -627,8 +627,8 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <h2 class="text-uppercase">Naturescape</h2>
+                <p class="item-intro text-muted">Natural wonders of the calming effect of meditation.</p>
                 <img class="img-fluid d-block mx-auto" src="img/scape.jpg" alt="">
                 <p>Gazebo and lake</p>
                 <ul class="list-inline">
