--- a/webpages/index.html
+++ b/webpages/index.html
@@ -48,12 +48,12 @@
             <a class="nav-link js-scroll-trigger" href="#about">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Images</a>
+            <a class="nav-link js-scroll-trigger" href="../portfolioSite/index.html">Images</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact"></a>
             <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="../portfolioSite/index.html">Other Works</a>
+            <a class="nav-link js-scroll-trigger" href="#services"></a>
           </li>
         </ul>
       </div>
