--- a/images/index.html
+++ b/images/index.html
@@ -39,7 +39,7 @@
     </div><!-- .site-branding -->
 
     <ul class="main-menu flex flex-column justify-content-center">
-        <li class="current-menu-item"><a href="index.html">Home</a></li>
+        <li class="current-menu-item"><a href="../webpages/index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="#">About</a></li>
