--- a/webpages/index.html
+++ b/webpages/index.html
@@ -51,7 +51,7 @@
             <a class="nav-link js-scroll-trigger" href="../portfolioSite/index.html">Images</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="../images/index.html">Links</a>
+            <a class="nav-link js-scroll-trigger" href="../imageSlide/index.html">Links</a>
             <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#services"></a>
           </li>
