--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -89,21 +89,21 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-01-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/landscape.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>One</span></h2>
                                                 <p class="tm-figure-description">Natural Landscape.</p>
-                                                <a href="img/tm-img-01.jpg">View more</a>
+                                                <a href="img/landscape.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-02-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/objects.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Two</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-02.jpg">View more</a>
+                                                <p class="tm-figure-description">Artifacts through augmented reality.</p>
+                                                <a href="img/objects.jpg">View more</a>
                                             </figcaption>
                                         </figure>
                                     </div>
