--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -109,11 +109,11 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-03-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/hills.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Three</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                                <a href="img/tm-img-03.jpg">View more</a>
+                                                <p class="tm-figure-description">VR Landscape.</p>
+                                                <a href="img/hills.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
@@ -122,7 +122,7 @@ http://www.tooplate.com/view/2086-multi-color
                                             <img src="img/tm-img-04-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Four</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
+                                                <p class="tm-figure-description">Meditational virtual landscape.</p>
                                                 <a href="img/tm-img-04.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
