--- a/webpages/index.html
+++ b/webpages/index.html
@@ -64,7 +64,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome to my site</div>
+        <div class="intro-lead-in"></div>
         <div class="intro-heading text-uppercase"></div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="../index.html ">JS Animation</a>
       </div>
