--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -129,31 +129,31 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>  
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-05-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/boardGame.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Five</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                                <a href="img/tm-img-05.jpg">View more</a>
+                                                <p class="tm-figure-description">Board game prototypes.</p>
+                                                <a href="img/boardGame.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-06-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/layout.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Six</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-06.jpg">View more</a>
+                                                <p class="tm-figure-description">Regional drafting.</p>
+                                                <a href="img/layout.JPG">View more</a>
                                             </figcaption>
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-07-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/simulations.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Seven</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                                <a href="img/tm-img-07.jpg">View more</a>
+                                                <p class="tm-figure-description">Simulating a board game.</p>
+                                                <a href="img/simulations.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
