--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -169,21 +169,21 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>   
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-09-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/hillGreens.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Nine</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                                <a href="img/tm-img-09.jpg">View more</a>
+                                                <p class="tm-figure-description">Hills with Grass..</p>
+                                                <a href="img/hillGreens.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-10-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/streamline.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Ten</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-10.jpg">View more</a>
+                                                <p class="tm-figure-description">River and hills.</p>
+                                                <a href="img/streamline.jpg">View more</a>
                                             </figcaption>
                                         </figure>
                                     </div>
