--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -123,7 +123,7 @@ http://www.tooplate.com/view/2086-multi-color
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Four</span></h2>
                                                 <p class="tm-figure-description">Meditational virtual landscape.</p>
-                                                <a href="overview.jpg">View more</a>
+                                                <a href="img/overview.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>  
