--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -83,7 +83,7 @@ http://www.tooplate.com/view/2086-multi-color
                                 <div class="tm-img-gallery gallery-one">
                                 <!-- Gallery One pop up connected with JS code below -->                                    
                                     <div class="tm-img-gallery-info-container">                                    
-                                        <h2 class="tm-text-title tm-gallery-title tm-white"><span class="tm-white">Work</span></h2>
+                                        <h2 class="tm-text-title tm-gallery-title tm-white"><span class="tm-white">Project Documentation</span></h2>
                                         <p class="tm-text">This site shows my work and work in progress.
                                         </p>
                                     </div>
