--- a/portfolioSite/index.html
+++ b/portfolioSite/index.html
@@ -37,10 +37,10 @@
         <a class="nav-link" href="../webpages/index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Processing</a>
+        <a class="nav-link" href="#"></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Arduino Works</a>
+        <a class="nav-link" href="#"></a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Maker Faire 2019</a>
